# Lyceum-Auth-Backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  justfile  pyproject.toml
app/: config.py  main.py
app/application/interfaces/: repositories.py
app/application/services/: auth_service.py  key_creator_rotor.py  user_service.py
app/domain/entities/: user.py
app/domain/enums/: department.py  permission.py  position.py  role.py
app/infrastructure/: database.py
app/infrastructure/models/: refresh_token.py  user.py
app/infrastructure/repositories/: refresh_token_repository.py  user_repository.py
app/presentation/: dependencies.py
app/presentation/api/v1/: auth.py  users.py
app/presentation/schemas/: auth.py  user.py
migrations/: env.py
migrations/versions/: 2026_02_17_1020-15916ceb391d_initial.py  2026_04_09_1629-c45e837847b8_departments.py  2026_04_23_1845-b720dac5dd90_.py
scripts/: create_admin.py  init_keys.py
